# attempt_at_game

./: .gitignore  CMakeLists.txt  README.MD  TEACHING_CONTEXT.md  claude_teaching_context.md
src/: main.cpp
src/core/: GameLoop.cpp  GameLoop.h
src/player/: Gun.cpp  Gun.h  Player.cpp  Player.h
src/world/: Enemy.cpp  Enemy.h  World.cpp  World.h
